GMM_Main/src/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_No_Longer_in_Use__c</fullName>
        <label>Reason No Longer in Use</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campus Record ID</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Created_By__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Terminated_By1__c</fullName>
        <label>Unit Terminated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>Unit Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c  &lt; Region__r.Region_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective Date must be greater than or equal to the Campus Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_2</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt;  Region__r.Region_End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be less than or equal to the Campus End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be after the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_No_Longer_in_Use</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK( End_Date__c )),
ISBLANK( Reason_No_Longer_in_Use__c ))</errorConditionFormula>
        <errorDisplayField>Reason_No_Longer_in_Use__c</errorDisplayField>
        <errorMessage>required if &quot;end date&quot; is entered</errorMessage>
    </validationRules>
</CustomObject>